<resources>
    <string name="app_name">Doctors</string>
    <string name="login_str">Login</string>
    <string name="signUp_str">Sign up</string>
    <string name="welcome_str">Welcome</string>
    <string name="email_str">email</string>
    <string name="pass_str">password</string>
    <string name="all_fileds_are_required">All field are required</string>
    <string name="create_new_account">create new accont</string>
    <string name="username_str">Username</string>
    <string name="confirm_pass_str">confirm password</string>
    <string name="password_must_be_length">password must be at least 6 characters</string>
    <string name="passwords_not_match">passwords not match</string>
    <string name="signup_success">Signup success</string>
    <string name="doctor">"Doctor "</string>
    <string name="patient">Patient</string>
    <string name="choose_type">Choose your type:</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="current_patient">Current patient</string>
    <string name="waiting_list">Waiting list</string>
    <string name="patient_name">Patient name:</string>
    <string name="user_not_exists">user not exists</string>
    <string name="doctors_list">Doctors list:</string>
    <string name="doctor_name">Doctor name:</string>
    <string name="available">Available</string>
    <string name="not_available">Not available</string>
    <string name="make_appointment">Make an appointment</string>
    <string name="cancle_appointment">Cancle an appointment</string>
    <string name="show_available_doctors">Show availble doctors</string>
    <string name="failed">Failed! something is worng</string>
    <string name="Ok_BTN">OK</string>
    <string name="no_patients_waiting">No patients waiting</string>
    <string name="Registration_canceled">The appointment with doctor cancled</string>
    <string name="Doctor_waiting_list">Waiting list for Dr:</string>
    <string name="your_turn_now">Your turn now</string>
    <string name="Registration_appointment">Appointment has made</string>
    <string name="hello_patient">Hello</string>
    <string name="signOut">Sign out</string>
</resources>