<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/blue_activity_background"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="156dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/main_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_str"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/blue_title"
        android:textSize="35sp"
        android:layout_marginTop="15dp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/loginChoiceBTN"
        android:layout_width="187dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/login_str"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@drawable/btn_background"
        />

    <Button
        android:id="@+id/signupChoiceBTN"
        android:layout_width="187dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:text="@string/signUp_str"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@drawable/btn_background"/>
</LinearLayout>