<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/blue_activity_background">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="7dp"
        android:layout_alignParentEnd="true">

        <ImageButton
            android:id="@+id/SignOutBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_logout_24"
            android:background="@color/blue_activity_background" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signOut"
            android:textColor="@color/black"/>
    </LinearLayout>

    <TextView
        android:id="@+id/NoPatientText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_patients_waiting"
        android:visibility="invisible"
        android:layout_centerInParent="true"
        android:textColor="@color/blue_title"
        android:textStyle="bold"
        android:textSize="35sp" />

<LinearLayout
    android:id="@+id/FirstLayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="visible"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="7dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_patient"
            android:textColor="@color/blue_title"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/hello_doctor_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="patient name"
            android:textColor="@color/blue_title"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_patient"
        android:textColor="@color/blue_title"
        android:textStyle="bold"
        android:textSize="20sp"
        android:padding="7dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/CurrentPatientRecycleView"
        android:layout_below="@id/FirstLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/waiting_list"
        android:paddingTop="20dp"
        android:textColor="@color/blue_title"
        android:textStyle="bold"
        android:textSize="20sp"
        android:padding="7dp"/>

</LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/PatientRecycleView"
        android:layout_below="@id/FirstLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</RelativeLayout>


