<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/blue_activity_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="7dp"
        android:layout_alignParentEnd="true">

    <ImageButton
        android:id="@+id/SignOutBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_logout_24"
        android:background="@color/blue_activity_background" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signOut"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/FirstLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout
            android:id="@+id/hello_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="7dp"
            android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_patient"
            android:textColor="@color/blue_title"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/hello_patient_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="patient name"
            android:textColor="@color/blue_title"
            android:textSize="20sp"
            android:textStyle="bold"/>


        </LinearLayout>

        <CheckBox
            android:id="@+id/availbleDoctorCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_available_doctors"
            android:textColor="@color/blue_title"
            android:textSize="20sp"
            android:padding="7dp"
            android:checked="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doctors_list"
            android:padding="7dp"
            android:textColor="@color/blue_title"
            android:textSize="20sp"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/DoctorsRecycleView"
        android:layout_below="@id/FirstLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</RelativeLayout>


