<LinearLayout android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/blue_activity_background">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="156dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/main_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/login_str"
        android:layout_marginTop="15dp"
        android:textColor="@color/blue_title"
        android:textSize="35sp"
        android:textStyle="bold"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/EmailLogin_STR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        app:met_textColorHint="@color/black"
        app:met_floatingLabel="normal"
        android:hint="@string/email_str"
        android:drawableStart="@drawable/ic_email_icon_black_24dp"
        android:drawablePadding="10dp"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/PassLogin_STR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        app:met_textColorHint="@color/black"
        app:met_floatingLabel="normal"
        android:hint="@string/pass_str"
        android:drawableStart="@drawable/ic_password_black_24dp"
        android:drawablePadding="10dp"/>

    <Button
        android:id="@+id/Login_BTN"
        android:layout_width="246dp"
        android:layout_height="56dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/login_str"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:background="@drawable/btn_background"/>

</LinearLayout>